[project]
name = "bus-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "doaads",email = "doaads@proton.me"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mysqlclient (>=2.2.7,<3.0.0)",
    "django (>=6.0.1,<7.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "joserfc (>=1.6.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "bus_backend", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
